# mim_nlp

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.ci/: flake8.sh  isort.sh  stripped_notebooks_check.sh  test.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: codeql.yml  tests.yml
.hooks/: isort.sh  strip_notebooks.py
mim_nlp/: general_utils.py
mim_nlp/classifier/nn/: __init__.py  nn_classifier.py
mim_nlp/classifier/svm/: __init__.py  svm.py  svm_explainer.py  svm_reduction.py
mim_nlp/models/: __init__.py  classifier.py  model.py  regressor.py  seq2seq.py  summarizer.py
mim_nlp/neural_network/: __init__.py  nn_model.py  nn_module.py
mim_nlp/preprocessing/: __init__.py  cleaning_functions.py  duplicates.py  exceptions.py  lemmatize.py  text_cleaner.py  utils.py
mim_nlp/regressor/: __init__.py  auto_regressor.py  nn_regressor.py
mim_nlp/seq2seq/: __init__.py  auto_summarizer.py  data.py
notebooks/classifier/: nn_classifier_example.ipynb  svm_classifier_example.ipynb  svm_classifier_model_save_vs_save_without_stopwords.ipynb  svm_classifier_model_with_feature_selection.ipynb
notebooks/preprocessing/: clean_and_lemmatize_example.ipynb  duplicates_example.ipynb
notebooks/regressor/: auto_regressor_example.ipynb  nn_regressor_example.ipynb
notebooks/seq2seq/: seq2seq_summarizer_example.ipynb
stripped/notebooks/classifier/: nn_classifier_example_stripped.py  svm_classifier_example_stripped.py  svm_classifier_model_save_vs_save_without_stopwords_stripped.py  svm_classifier_model_with_feature_selection_stripped.py
stripped/notebooks/preprocessing/: clean_and_lemmatize_example_stripped.py  duplicates_example_stripped.py
stripped/notebooks/regressor/: auto_regressor_example_stripped.py  nn_regressor_example_stripped.py
stripped/notebooks/seq2seq/: seq2seq_summarizer_example_stripped.py
tests/: conftest.py  test_tests.py
tests/classifier/: test_nn_classifier.py  test_svm.py
tests/preprocessing/: test_clean_texts.py  test_duplicates.py
tests/regressor/: test_auto_regressor.py  test_nn_regressor.py
tests/seq2seq/: test_seq2seq_dataset.py
